# Teal

./: .gitignore  Cargo.toml  README.md  ether.js  gamebuild.js  index.html  playgame.js
gameEditor/: Node.js  gameEditor.html  gameEditor.js
pkg/: package.json  teal.d.ts  teal.js  teal_bg.wasm  teal_bg.wasm.d.ts
src/: lib.rs  main.rs
teals/: README.md  emberux.teal.json  golem.teal.json
