[package]
name = "teal"
version = "0.1.0"
authors = ["Murtuza Kainan <murtuzakainan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.4"